--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="screen-orientation" content="portrait">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0"/>
-    <title>年会抽奖小程序</title>
+    <title>动如脱兔Jingru Xiao</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/wall.css">
     <style type="text/css">
@@ -141,7 +141,7 @@
 <body>
 <div id="main" class="wall">
     <div class="result-btn">
-       <a href="./result.html" target="_blank">获奖名单</a>
+       <a href="./result.html" target="_blank">获奖记录</a>
     </div>
 </div>
 <div id="result" class="result">
@@ -218,10 +218,10 @@
         new Vue({
             el: '#tools',
             data: {
-                selected: 30,
+                selected: 1,
                 running: false,
                 btns: [
-                    30, 10, 5, 2, 1
+                   
                 ]
             },
             mounted () {
@@ -235,10 +235,8 @@
             },
             methods: {
                 reset: function(){
-                    if(confirm('确定要重置么？所有之前的抽奖历史将被清除！')){
-                        localStorage.clear();
-                        location.reload(true);
-                    }
+                    localStorage.clear();
+                    location.reload(true);
                 },
                 onClick: function(num){
                     $('#result').css('display', 'none');
