--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <body>
 <div id="main" class="wall">
     <div class="result-btn">
-       <a href="./result.html" target="_blank">获奖记录</a>
+       <a href="./result.html" target="_blank">记录</a>
     </div>
 </div>
 <div id="result" class="result">
