--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
 <div id="main" class="wall">
     <div class="result-btn">
-       <a href="./result.html" target="_blank">记录</a>
+       <a href="./result.html" target="_blank">一共六次机会</a>
     </div>
 </div>
 <div id="result" class="result">
